--- a/templates/base.html
+++ b/templates/base.html
@@ -31,6 +31,18 @@
             width: 1170px;
           }
         }
+        #history-users{
+            min-height:70px;
+            height:calc(80vh - 35px);
+        }
+        .l-box {
+            padding: 1em;
+            height:calc(100% - 35px) !important;
+            margin: auto;
+        }
+        .pl-l-box {
+            border-left: 1px dashed darkgrey;
+        }
     </style>
     {% block head %}{% endblock %}
 </head>
