--- a/chat/templates/chat.html
+++ b/chat/templates/chat.html
@@ -7,11 +7,14 @@
     <div class="container" style="border:1px solid darkgrey">
         <div id="history-users" class="pure-g">
             <div class="pure-u-19-24" style="height:100%;">
-                <div id="history" class="l-box"
-                     data-bind="foreach: vm.messages">
-                    <div>
-                        <span data-bind="text: user"></span>:
-                        <span data-bind="text: body"></span>
+                <div id="history" class="l-box">
+                     <div data-bind="foreach: msgs">
+                         <div style="background-color: lightblue; border-radius: 5px;padding:0.5em;margin:3px;">
+                             [<span data-bind="text: dt"></span>]
+                             <span data-bind="text: username"></span>:
+                             <span data-bind="text: body"></span>
+                         </div>
+
                     </div>
                 </div>
             </div>
@@ -25,7 +28,8 @@
         <form id="msgform" class="pure-form">{% csrf_token %}
             <div class="pure-g">
                 <div class="pure-u-20-24">
-                    <input data-bind="value: vm.message,
+                    <input name="body"
+                           data-bind="value: vm.message,
                            event: {enter: onMsg}"
                            class="pure-input pure-u-1"
                            placeholder="Type your message...">
@@ -39,24 +43,24 @@
         </form>
     </div>
     <script>
-        let vm = {
+        var vm = {
             message: ko.observable(''),
-            messages: ko.observableArray([{"user": "none", "body": "loading"}]),
-            //let users = ko.observableArray([]);
-            last_refresh: ko.observable(),
+            msgs: ko.observableArray([{"username": "none", "body": "loading", "dt": "04:04:04", "msg_id": 0}]),
+            //let users: ko.observableArray([]),
+            last_refresh: ko.observable()
         }
 
         ko.applyBindings(vm);
 
         var intervalId = window.setInterval(function(){
-          vm.messages($.get('{% url "chat_history" %}'));
+          $.getJSON('{% url "chat_history" %}', function(dd){vm.msgs(dd.messages)});
         }, 2000);
 
         function onMsg(){
             $.post(
                 '{% url "chat_new" %}',
                 $("#msgform").serialize(),
-                function () {$('#msgform input').text('')}
+                function(){vm.message('')}
             )
         }
 
