--- a/templates/base.html
+++ b/templates/base.html
@@ -11,10 +11,11 @@
             crossorigin="anonymous"></script>{% endblock %}
     <style>
         .container {
-          padding-right: 15px;
-          padding-left: 15px;
-          margin-right: auto;
-          margin-left: auto;
+            padding-top:15px;
+            padding-right: 15px;
+            padding-left: 15px;
+            margin-right: auto;
+            margin-left: auto;
         }
         @media (min-width: 768px) {
           .container {
