--- a/templates/base.html
+++ b/templates/base.html
@@ -74,15 +74,10 @@
             </li>
 
             <li class="pure-menu-item">
-              <a href="" class="pure-menu-link">Register</a>
+              <a href="https://justgiving.com/crowdfunding/halovend-initiative" class="pure-menu-link">Halovend Initiative Crowfunder</a>
             </li>
-
             <li class="pure-menu-item">
-              <a href="{% url "register" %}" class="pure-menu-link">Register</a>
-            </li>
-
-            <li class="pure-menu-item">
-              <a href="{% url "register" %}" class="pure-menu-link">Register</a>
+              <a href="https://justgiving.com/crowdfunding/doctors-diagnosis-assistant" class="pure-menu-link">Doctors Diagnosis App Crowfunder</a>
             </li>
           </ul>
         </div>
