--- a/chat/templates/messagemore.html
+++ b/chat/templates/messagemore.html
@@ -1,9 +1,26 @@
 {% extends "base.html" %}
 {% block title %}Message detail{% endblock %}
 {% block body %}
-    <ul>
+    <table class="pure-table pure-table-horizontal">
+    <thead>
+        <tr>
+            <th>Edit No.</th>
+            <th>Date &amp; Time</th>
+            <th>User</th>
+            <th>Message</th>
+            <th>Options</th>
+        </tr>
+    </thead>
+    <tbody>
     {% for message in object_list %}
-        <li>{{ forloop.counter }} - [{{ message.formatted_time }}] &lt;{{ message.username }}&gt; {{ message.body }} {% if forloop.last %}<a href="{% url "chat_message_edit" message.pk %}">edit</a> {% endif %}<a href="/chat/message/report/{{ message.pk }}">report</a></li>
+        <tr>
+            <td>{{ forloop.counter }}</td>
+            <td>{{ message.formatted_time }}</td>
+            <td>{{ message.username }}</td>
+            <td>{{ message.body }}</td>
+            <td>{% if forloop.last %}{% if message.current_user %}<a href="{% url "chat_message_edit" message.pk %}">edit</a> {% endif %}{% endif %}<a href="/chat/message/report/{{ message.pk }}">report</a></td>
+        </tr>
     {% endfor %}
-    </ul>
+    </tbody>
+    </table>
 {% endblock %}
