--- a/templates/base.html
+++ b/templates/base.html
@@ -61,17 +61,17 @@
             </li>
               {% endif %}
             <li class="pure-menu-item">
-              <a href="#" class="pure-menu-link">FAQ</a>
+              <a href="{% url "contact"  %}" class="pure-menu-link">Abuse Contact</a>
             </li>
-              <li class="pure-menu-item">
-              <a href="#" class="pure-menu-link">Guides</a>
-            </li>
-              <li class="pure-menu-item">
-              <a href="#" class="pure-menu-link">Blog</a>
-            </li>
-            <li class="pure-menu-item">
-              <a href="#" class="pure-menu-link">About</a>
-            </li>
+{#              <li class="pure-menu-item">#}
+{#              <a href="#" class="pure-menu-link">Guides</a>#}
+{#            </li>#}
+{#              <li class="pure-menu-item">#}
+{#              <a href="#" class="pure-menu-link">Blog</a>#}
+{#            </li>#}
+{#            <li class="pure-menu-item">#}
+{#              <a href="#" class="pure-menu-link">About</a>#}
+{#            </li>#}
 
             <li class="pure-menu-item">
               <a href="https://justgiving.com/crowdfunding/halovend-initiative" class="pure-menu-link">Halovend Initiative Crowfunder</a>
