--- a/chat/templates/messagemore.html
+++ b/chat/templates/messagemore.html
@@ -1,6 +1,9 @@
 {% extends "base.html" %}
 {% block title %}Message detail{% endblock %}
 {% block body %}
+    <h1>Message Edit History</h1>
+    <p>Here is a list of the edit history for the message.
+        If it is your message you can edit it here.</p>
     <table class="pure-table pure-table-horizontal">
     <thead>
         <tr>
